# math_geometric

./: .gitignore  CMakeLists.txt  README.md  angle.h  main.cpp  unit_test.cpp  unit_test.h  unit_test_sa.cpp  unit_test_sa.h  user_type.h
algorithm/: approximation_algorithm.h  circle_algorithm.h  geo_algorithm.h  line_algorithm.h  math_algorithm.h  matrix_algorithm.h  point_algorithm.h  polygon_algorithm.h
iterator/: matrix_iterator.h
special_algorithms/navigation_route/: algorithm_route.h  figure_route.h
structs/: circle_impl.h  line_impl.h  matrix.h  point_impl.h  polygon_impl.h  struct_geo_imp.h  vector.h
system/: system_concept.h  system_function.h  system_unit.h
unit/: angle.h  distance.h  speed.h  temperature.h  time.h  weight.h
